--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -34,7 +34,12 @@ jobs:
       uses: jiro4989/setup-nim-action@v1.1.4
       with:
         # The Nim version to download (if necessary) and use. Example: 1.0.2
-        nim-version: stable # optional, default is stable
+        nim-version: 1.6.18 # optional, default is stable
+
+    - name: Install toolchains
+      run: |
+        export DEBIAN_FRONTEND=noninteractive
+        sudo apt install gcc make gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
     - name: Construct release name
       id: vars
@@ -50,14 +55,20 @@ jobs:
 
     - name: Build
       run: |
-        nimble install -d -y
-        nimble c -d:ssl -d:version=$(git describe --always) src/accountserver
-
-    - name: package
-      run: |
+        set -x
         mkdir dist
-        cp src/accountserver dist/accountserver-${{ steps.vars.outputs.release_name }}
-        tar Jcf dist/accountserver-${{ steps.vars.outputs.release_name }}.tar.xz -C src accountserver
+        nimble install -d -y
+
+        nimble c -d:ssl -d:version=$(git describe --always) src/accountserver
+        cp src/accountserver dist/accountserver-`uname -m`-${{ steps.vars.outputs.release_name }}
+        tar Jcf dist/accountserver-`uname -m`-${{ steps.vars.outputs.release_name }}.tar.xz -C src accountserver
+
+        for arch in aarch64; do
+          git clean -fdx src
+          nimble c --cc:aarch64-linux-gnu-gcc -d:ssl -d:version=$(git describe --always) src/accountserver
+          cp src/accountserver dist/accountserver-$arch-${{ steps.vars.outputs.release_name }}
+          tar Jcf dist/accountserver-$arch-${{ steps.vars.outputs.release_name }}.tar.xz -C src accountserver
+        done
 
     # https://github.com/marketplace/actions/create-release
     - name: Release
